--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivion Admin - Mission Control</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.min.js"></script>
 </head>
 
@@ -137,6 +137,12 @@
                                 ENCERRAR
                             </button>
                         </div>
+                        <div style="margin-top: 1rem;">
+                            <button id="btn-delete-room" class="btn-primary filled"
+                                style="width: 100%; padding: 1rem; font-size: 0.8rem; background: var(--accent-red); color: #111;">
+                                EXCLUIR SALA
+                            </button>
+                        </div>
                     </section>
                 </main>
 
@@ -180,7 +186,7 @@
             </div>
         </div> <!-- End .content -->
     </div>
-    <script src="js/admin.js"></script>
+    <script src="/js/admin.js"></script>
 </body>
 
 </html>
